<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ParkDroid</string>
    <string name="tab_main_nav_map">ParkDroid</string>
    <string name="preferences_search_radius">Search Radius</string>
    <string name="preferences_search_radius_summary">Click to pop up a list to choose from</string>
    <string name="preferences_search_radius_default">500</string>
    <string name="login_get_started">Get Started</string>
    <string name="register_now">Register Now</string>
    <string name="login_get_started_more">Don\'t have a ParkDroid account? We just need your email  and password</string>
    <string name="login_email">Email</string>
    <string name="login_name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_label">Log-in</string>
    <string name="register_label">Register</string>
    <string name="login_dialog_title">Please wait...</string>
    <string name="login_dialog_message">Logging into ParkDroid...</string>
    <string name="register_dialog_title">Please wait...</string>
    <string name="register_dialog_message">Registering new ParkDroid user...</string>    
    <string name="login_failed_login_toast">Unable to log in. Please check your email and password.</string>
    <string name="login_welcome_toast">Welcome 2 ParkDroid!</string>
    <string name="register_successfully_toast">Successfully registered! Use your email and password to log into ParkDroid.</string>
    <string name="register_unsuccessfull_toast">Some problem occured registering. Check your input or try again later.</string>
    <string name="preferences_logout_title">Logout</string>
    <string name="preferences_logout_summary">Sign out of ParkDroid.</string>
    <string name="preferences_additional_settings">Additional Settings</string>
    <string name="preferences_settings">Settings</string>
    <string name="no_search_results">No active reservations !</string>    
    <string name="no_parking_spaces">No parking spaces on the specified radius !</string>
    <string name="parking_lot_activity_reserve_now_button">Reserve Now</string>
    <string name="addressLabel">Address:</string>
    <string name="freeSpacesLabel">Free Spaces</string>
    <string name="distanceLabel">Distance</string>
    <string name="priceLabel">Price</string>
    <string name="parking_lot_name_label">Parking Space</string>
    <string name="parking_lot_location_label">Address</string>
    <string name="add_reservation_activity_starting_time_label">Starting</string>
    <string name="add_reservation_activity_ending_time_label">Ending</string>
    <string name="add_reservation_activity_price_title">Price per hour</string>    
    <string name="add_reservation_activity_time_title">Selected time</string>
    <string name="add_reservation_activity_total_price_title">Total Price</string>
    <string name="add_reservation_action_label">Please wait</string>
    <string name="add_reservation_activity_progress_bar_message">Making reservation...</string>
    <string name="add_reservation__activity_reserve_now">Reserve Now</string>
    <string name="tab_main_nav_parking_lots_list">Parkings List</string>
    <string name="tab_main_nav_active_reservations">Reservations</string>    
    <string name="parking_lot_activity_reservation_here">You have an active reservation here!</string>
    <string name="parking_lot_activity_spaces">Free Spaces</string>
    <string name="parking_lot_activity_distance_title">Distance</string>
    <string name="parking_lot_activity_price_title">Price/h</string>
    <string name="parking_lot_activity_phone_label">Phone: </string>
    <string name="parking_lot_activity_menu_call">Call</string>
    <string name="parking_lot_activity_button_back">Back</string>
    <string name="parking_lot_activity_hour_label">Open hours:</string>
    <string name="settings_user_info_label_user_id">User ID:</string>
    <string name="settings_user_info_label_email">Email:</string>
    <string name="preference_activity_profile_settings_dlg_title">Profile Settings</string>
    <string name="preferences_profile_settings_label">Profile Settings</string>
    <string name="preferences_profile_settings_summary">Information about your ParkDroid account</string>    
    <string name="reservation_activity_price">Price/hour</string>
    <string name="reservation_activity_time_title">Selected time</string>
		<string name="reservation_activity_total_price_title">Total Price</string>
		<string name="reservation_activity_id_label">Reservation ID</string>	
		<string name="reservation_activity_starting_time_label">Starting time</string>	
		<string name="reservation_activity_ending_time_label">Ending time</string>
		<string name="reservation_activity_navigation_label">Get directions</string>	
    <string name="reservation_activity_cancel_button">Delete reservation</string>
    <string name="reservation_activity_modify_button">Modify reservation</string>
    <string name="add_reservation_execute_activity_action_label">Please wait!</string>
    <string name="add_reservation_activity_make_progress_bar_message">Making reservation...</string>
    <string name="add_reservation_activity_modify_progress_bar_message">Changing reservation...</string>
    <string name="add_reservation_activity_delete_progress_bar_message">Deleting reservation...</string>
    <string name="add_reservation_title_result">Reservation confirmed!</string>
    <string name="add_reservation_activity_reservation_label">Unique ID</string>
    <string name="refresh">Refresh</string>
    <string name="add_reservation_dialog_id_label">ReservationID:</string>
    <string name="add_reservation_dialog_start_time_label">Starting:</string>
    <string name="add_reservation_dialog_end_time_label">Ending:</string>
    <string name="add_reservation_dialog_total_time_label">Total time:</string>
    <string name="add_reservation_dialog_cost_label">Cost:</string>
    <string name="add_reservation_dialog_price_label">Price/h:</string>
    <string name="need_an_account">Need an accout?</string>
</resources>
